Major changes in Game configuration and declaration from new places, keay, npc and refactoring from items